--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/PATIENT_DB?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=mysql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+spring.main.allow-circular-references=true
